MillBuild/generated/parser/stage2.output
Terminals unused in grammar

    COMMENT
    LEXICALERROR
    `;`
    `{`
    `}`
    `%type`
    HIGH


Grammar

    0 $accept: Notation $end

    1 Notation: Prefix `%rules` INCLUDE Rules OPTSEPARATOR

    2 Prefix: ε
    3      | Prefix `%notation` ID
    4      | Prefix `%package` ID
    5      | Prefix `%path` STRINGorID
    6      | Prefix `%tables` STRINGorID
    7      | Prefix `%include` CODE
    8      | Prefix `%token` TypedTerminals
    9      | Prefix `%left` TypedTerminals
   10      | Prefix `%right` TypedTerminals
   11      | Prefix `%non` TypedTerminals
   12      | Prefix `%prec` TypedTerminals
   13      | Prefix `%dialect` STRINGorID
   14      | Prefix `%scalalr` STRINGorID
   15      | Prefix `%signature` STRINGorID

   16 INCLUDE: `%include` CODE SEPARATOR
   17      | ε

   18 OPTSEPARATOR: ε
   19      | SEPARATOR

   20 STRINGorID: ID
   21      | STRING

   22 TypedTerminals: ε
   23      | TypedTerminal TypedTerminals

   24 TypedTerminal: STRINGorID `:` Type
   25      | STRINGorID `(` Type `)`
   26      | STRINGorID

   27 Rules: Rule
   28      | Rules SEPARATOR Rule

   29 Rule: LHS S_1 RHS

   30 LHS: ID `:` Type `=`
   31      | ID `=`

   32 RHS: Production
   33      | Production `|` RHS

   34 Production: Fields Action Precedence

   35 Fields: `%empty`
   36      | S_2

   37 NamedField: FIELD
   38      | ID `:` FIELD

   39 FIELD: ID
   40      | STRING
   41      | `(` Fields `)` REPEAT

   42 REPEAT: `?`
   43      | `*`
   44      | `+`
   45      | `*` `.` `.`
   46      | `+` `.` `.`
   47      | `.` `.` `.`

   48 Precedence: S_3

   49 Type: ID
   50      | ID `[` Types `]`
   51      | `(` Types `)`
   52      | `(` `)`

   53 Types: S_4

   54 Action: ε
   55      | CODE
   56      | `=>` Scala

   57 Scala: ScalaAtom
   58      | ScalaID `(` Scalas `)`
   59      | ScalaID `.` ScalaID `(` Scalas `)`
   60      | ScalaID `.` ScalaID
   61      | Scala `::` Scala
   62      | Scala `+` Scala
   63      | Scala `*` Scala
   64      | Scala `/` Scala
   65      | Scala `-` Scala

   66 Scalas: S_5

   67 ScalaAtom: ScalaID
   68      | NUM
   69      | `(` Scalas `)`
   70      | STRING

   71 ScalaID: ID
   72      | `$` ID

   73 S_1: ε
   74      | `|`

   75 S_2_L: NamedField
   76      | S_2_L NamedField

   77 S_2: S_2_L

   78 S_3: ε
   79      | `%prec` ID

   80 S_4_L: Type
   81      | S_4_L `,` Type

   82 S_4: S_4_L

   83 S_5_L: Scala
   84      | S_5_L `,` Scala

   85 S_5: ε
   86      | S_5_L


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID (258) 3 4 20 30 31 38 39 49 50 71 72 79
    NUM (259) 68
    CODE (260) 7 16 55
    STRING (261) 21 40 70
    COMMENT (262)
    LEXICALERROR (263)
    `[` (264) 50
    `]` (265) 50
    `;` (266)
    `=` (267) 30 31
    `|` (268) 33 74
    `:` (269) 24 30 38
    `{` (270)
    `}` (271)
    `(` (272) 25 41 51 52 58 59 69
    `)` (273) 25 41 51 52 58 59 69
    `,` (274) 81 84
    `%path` (275) 5
    `%type` (276)
    `%empty` (277) 35
    `%notation` (278) 3
    `%package` (279) 4
    `%token` (280) 8
    `%left` (281) 9
    `%right` (282) 10
    `%non` (283) 11
    `%rules` (284) 1
    `%include` (285) 7 16
    `%prec` (286) 12 79
    `%tables` (287) 6
    `%dialect` (288) 13
    `%scalalr` (289) 14
    `%signature` (290) 15
    `*` (291) 43 45 63
    `?` (292) 42
    `+` (293) 44 46 62
    `=>` (294) 56
    `$` (295) 72
    `::` (296) 61
    `-` (297) 65
    `/` (298) 64
    `.` (299) 45 46 47 59 60
    SEPARATOR (300) 16 19 28
    HIGH (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    Notation (48)
        on left: 1
        on right: 0
    Prefix (49)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 1 3 4 5 6 7 8 9 10 11 12 13 14 15
    INCLUDE (50)
        on left: 16 17
        on right: 1
    OPTSEPARATOR (51)
        on left: 18 19
        on right: 1
    STRINGorID (52)
        on left: 20 21
        on right: 5 6 13 14 15 24 25 26
    TypedTerminals (53)
        on left: 22 23
        on right: 8 9 10 11 12 23
    TypedTerminal (54)
        on left: 24 25 26
        on right: 23
    Rules (55)
        on left: 27 28
        on right: 1 28
    Rule (56)
        on left: 29
        on right: 27 28
    LHS (57)
        on left: 30 31
        on right: 29
    RHS (58)
        on left: 32 33
        on right: 29 33
    Production (59)
        on left: 34
        on right: 32 33
    Fields (60)
        on left: 35 36
        on right: 34 41
    NamedField (61)
        on left: 37 38
        on right: 75 76
    FIELD (62)
        on left: 39 40 41
        on right: 37 38
    REPEAT (63)
        on left: 42 43 44 45 46 47
        on right: 41
    Precedence (64)
        on left: 48
        on right: 34
    Type (65)
        on left: 49 50 51 52
        on right: 24 25 30 80 81
    Types (66)
        on left: 53
        on right: 50 51
    Action (67)
        on left: 54 55 56
        on right: 34
    Scala (68)
        on left: 57 58 59 60 61 62 63 64 65
        on right: 56 61 62 63 64 65 83 84
    Scalas (69)
        on left: 66
        on right: 58 59 69
    ScalaAtom (70)
        on left: 67 68 69 70
        on right: 57
    ScalaID (71)
        on left: 71 72
        on right: 58 59 60 67
    S_1 (72)
        on left: 73 74
        on right: 29
    S_2_L (73)
        on left: 75 76
        on right: 76 77
    S_2 (74)
        on left: 77
        on right: 36
    S_3 (75)
        on left: 78 79
        on right: 48
    S_4_L (76)
        on left: 80 81
        on right: 81 82
    S_4 (77)
        on left: 82
        on right: 53
    S_5_L (78)
        on left: 83 84
        on right: 84 86
    S_5 (79)
        on left: 85 86
        on right: 66


State 0

    0 $accept: • Notation $end

    `%path`  reduce using rule 2 (Prefix)
    `%notation`  reduce using rule 2 (Prefix)
    `%package`  reduce using rule 2 (Prefix)
    `%token`  reduce using rule 2 (Prefix)
    `%left`  reduce using rule 2 (Prefix)
    `%right`  reduce using rule 2 (Prefix)
    `%non`  reduce using rule 2 (Prefix)
    `%rules`  reduce using rule 2 (Prefix)
    `%include`  reduce using rule 2 (Prefix)
    `%prec`  reduce using rule 2 (Prefix)
    `%tables`  reduce using rule 2 (Prefix)
    `%dialect`  reduce using rule 2 (Prefix)
    `%scalalr`  reduce using rule 2 (Prefix)
    `%signature`  reduce using rule 2 (Prefix)

    Notation  go to state 1
    Prefix  go to state 2


State 1

    0 $accept: Notation • $end

    $end  shift, and go to state 3


State 2

    1 Notation: Prefix • `%rules` INCLUDE Rules OPTSEPARATOR
    3 Prefix: Prefix • `%notation` ID
    4      | Prefix • `%package` ID
    5      | Prefix • `%path` STRINGorID
    6      | Prefix • `%tables` STRINGorID
    7      | Prefix • `%include` CODE
    8      | Prefix • `%token` TypedTerminals
    9      | Prefix • `%left` TypedTerminals
   10      | Prefix • `%right` TypedTerminals
   11      | Prefix • `%non` TypedTerminals
   12      | Prefix • `%prec` TypedTerminals
   13      | Prefix • `%dialect` STRINGorID
   14      | Prefix • `%scalalr` STRINGorID
   15      | Prefix • `%signature` STRINGorID

    `%path`  shift, and go to state 4
    `%notation`  shift, and go to state 5
    `%package`  shift, and go to state 6
    `%token`  shift, and go to state 7
    `%left`  shift, and go to state 8
    `%right`  shift, and go to state 9
    `%non`  shift, and go to state 10
    `%rules`  shift, and go to state 11
    `%include`  shift, and go to state 12
    `%prec`  shift, and go to state 13
    `%tables`  shift, and go to state 14
    `%dialect`  shift, and go to state 15
    `%scalalr`  shift, and go to state 16
    `%signature`  shift, and go to state 17


State 3

    0 $accept: Notation $end •

    $default  accept


State 4

    5 Prefix: Prefix `%path` • STRINGorID

    ID  shift, and go to state 18
    STRING  shift, and go to state 19

    STRINGorID  go to state 20


State 5

    3 Prefix: Prefix `%notation` • ID

    ID  shift, and go to state 21


State 6

    4 Prefix: Prefix `%package` • ID

    ID  shift, and go to state 22


State 7

    8 Prefix: Prefix `%token` • TypedTerminals

    ID  shift, and go to state 142
    STRING  shift, and go to state 143

    `%path`  reduce using rule 22 (TypedTerminals)
    `%notation`  reduce using rule 22 (TypedTerminals)
    `%package`  reduce using rule 22 (TypedTerminals)
    `%token`  reduce using rule 22 (TypedTerminals)
    `%left`  reduce using rule 22 (TypedTerminals)
    `%right`  reduce using rule 22 (TypedTerminals)
    `%non`  reduce using rule 22 (TypedTerminals)
    `%rules`  reduce using rule 22 (TypedTerminals)
    `%include`  reduce using rule 22 (TypedTerminals)
    `%prec`  reduce using rule 22 (TypedTerminals)
    `%tables`  reduce using rule 22 (TypedTerminals)
    `%dialect`  reduce using rule 22 (TypedTerminals)
    `%scalalr`  reduce using rule 22 (TypedTerminals)
    `%signature`  reduce using rule 22 (TypedTerminals)

    STRINGorID  go to state 23
    TypedTerminals  go to state 24
    TypedTerminal  go to state 25


State 8

    9 Prefix: Prefix `%left` • TypedTerminals

    ID  shift, and go to state 142
    STRING  shift, and go to state 143

    `%path`  reduce using rule 22 (TypedTerminals)
    `%notation`  reduce using rule 22 (TypedTerminals)
    `%package`  reduce using rule 22 (TypedTerminals)
    `%token`  reduce using rule 22 (TypedTerminals)
    `%left`  reduce using rule 22 (TypedTerminals)
    `%right`  reduce using rule 22 (TypedTerminals)
    `%non`  reduce using rule 22 (TypedTerminals)
    `%rules`  reduce using rule 22 (TypedTerminals)
    `%include`  reduce using rule 22 (TypedTerminals)
    `%prec`  reduce using rule 22 (TypedTerminals)
    `%tables`  reduce using rule 22 (TypedTerminals)
    `%dialect`  reduce using rule 22 (TypedTerminals)
    `%scalalr`  reduce using rule 22 (TypedTerminals)
    `%signature`  reduce using rule 22 (TypedTerminals)

    STRINGorID  go to state 23
    TypedTerminals  go to state 26
    TypedTerminal  go to state 25


State 9

   10 Prefix: Prefix `%right` • TypedTerminals

    ID  shift, and go to state 142
    STRING  shift, and go to state 143

    `%path`  reduce using rule 22 (TypedTerminals)
    `%notation`  reduce using rule 22 (TypedTerminals)
    `%package`  reduce using rule 22 (TypedTerminals)
    `%token`  reduce using rule 22 (TypedTerminals)
    `%left`  reduce using rule 22 (TypedTerminals)
    `%right`  reduce using rule 22 (TypedTerminals)
    `%non`  reduce using rule 22 (TypedTerminals)
    `%rules`  reduce using rule 22 (TypedTerminals)
    `%include`  reduce using rule 22 (TypedTerminals)
    `%prec`  reduce using rule 22 (TypedTerminals)
    `%tables`  reduce using rule 22 (TypedTerminals)
    `%dialect`  reduce using rule 22 (TypedTerminals)
    `%scalalr`  reduce using rule 22 (TypedTerminals)
    `%signature`  reduce using rule 22 (TypedTerminals)

    STRINGorID  go to state 23
    TypedTerminals  go to state 27
    TypedTerminal  go to state 25


State 10

   11 Prefix: Prefix `%non` • TypedTerminals

    ID  shift, and go to state 142
    STRING  shift, and go to state 143

    `%path`  reduce using rule 22 (TypedTerminals)
    `%notation`  reduce using rule 22 (TypedTerminals)
    `%package`  reduce using rule 22 (TypedTerminals)
    `%token`  reduce using rule 22 (TypedTerminals)
    `%left`  reduce using rule 22 (TypedTerminals)
    `%right`  reduce using rule 22 (TypedTerminals)
    `%non`  reduce using rule 22 (TypedTerminals)
    `%rules`  reduce using rule 22 (TypedTerminals)
    `%include`  reduce using rule 22 (TypedTerminals)
    `%prec`  reduce using rule 22 (TypedTerminals)
    `%tables`  reduce using rule 22 (TypedTerminals)
    `%dialect`  reduce using rule 22 (TypedTerminals)
    `%scalalr`  reduce using rule 22 (TypedTerminals)
    `%signature`  reduce using rule 22 (TypedTerminals)

    STRINGorID  go to state 23
    TypedTerminals  go to state 28
    TypedTerminal  go to state 25


State 11

    1 Notation: Prefix `%rules` • INCLUDE Rules OPTSEPARATOR

    `%include`  shift, and go to state 29

    ID  reduce using rule 17 (INCLUDE)

    INCLUDE  go to state 30


State 12

    7 Prefix: Prefix `%include` • CODE

    CODE  shift, and go to state 31


State 13

   12 Prefix: Prefix `%prec` • TypedTerminals

    ID  shift, and go to state 142
    STRING  shift, and go to state 143

    `%path`  reduce using rule 22 (TypedTerminals)
    `%notation`  reduce using rule 22 (TypedTerminals)
    `%package`  reduce using rule 22 (TypedTerminals)
    `%token`  reduce using rule 22 (TypedTerminals)
    `%left`  reduce using rule 22 (TypedTerminals)
    `%right`  reduce using rule 22 (TypedTerminals)
    `%non`  reduce using rule 22 (TypedTerminals)
    `%rules`  reduce using rule 22 (TypedTerminals)
    `%include`  reduce using rule 22 (TypedTerminals)
    `%prec`  reduce using rule 22 (TypedTerminals)
    `%tables`  reduce using rule 22 (TypedTerminals)
    `%dialect`  reduce using rule 22 (TypedTerminals)
    `%scalalr`  reduce using rule 22 (TypedTerminals)
    `%signature`  reduce using rule 22 (TypedTerminals)

    STRINGorID  go to state 23
    TypedTerminals  go to state 32
    TypedTerminal  go to state 25


State 14

    6 Prefix: Prefix `%tables` • STRINGorID

    ID  shift, and go to state 18
    STRING  shift, and go to state 19

    STRINGorID  go to state 33


State 15

   13 Prefix: Prefix `%dialect` • STRINGorID

    ID  shift, and go to state 18
    STRING  shift, and go to state 19

    STRINGorID  go to state 34


State 16

   14 Prefix: Prefix `%scalalr` • STRINGorID

    ID  shift, and go to state 18
    STRING  shift, and go to state 19

    STRINGorID  go to state 35


State 17

   15 Prefix: Prefix `%signature` • STRINGorID

    ID  shift, and go to state 18
    STRING  shift, and go to state 19

    STRINGorID  go to state 36


State 18

   20 STRINGorID: ID •

    `%path`  reduce using rule 20 (STRINGorID)
    `%notation`  reduce using rule 20 (STRINGorID)
    `%package`  reduce using rule 20 (STRINGorID)
    `%token`  reduce using rule 20 (STRINGorID)
    `%left`  reduce using rule 20 (STRINGorID)
    `%right`  reduce using rule 20 (STRINGorID)
    `%non`  reduce using rule 20 (STRINGorID)
    `%rules`  reduce using rule 20 (STRINGorID)
    `%include`  reduce using rule 20 (STRINGorID)
    `%prec`  reduce using rule 20 (STRINGorID)
    `%tables`  reduce using rule 20 (STRINGorID)
    `%dialect`  reduce using rule 20 (STRINGorID)
    `%scalalr`  reduce using rule 20 (STRINGorID)
    `%signature`  reduce using rule 20 (STRINGorID)


State 19

   21 STRINGorID: STRING •

    `%path`  reduce using rule 21 (STRINGorID)
    `%notation`  reduce using rule 21 (STRINGorID)
    `%package`  reduce using rule 21 (STRINGorID)
    `%token`  reduce using rule 21 (STRINGorID)
    `%left`  reduce using rule 21 (STRINGorID)
    `%right`  reduce using rule 21 (STRINGorID)
    `%non`  reduce using rule 21 (STRINGorID)
    `%rules`  reduce using rule 21 (STRINGorID)
    `%include`  reduce using rule 21 (STRINGorID)
    `%prec`  reduce using rule 21 (STRINGorID)
    `%tables`  reduce using rule 21 (STRINGorID)
    `%dialect`  reduce using rule 21 (STRINGorID)
    `%scalalr`  reduce using rule 21 (STRINGorID)
    `%signature`  reduce using rule 21 (STRINGorID)


State 20

    5 Prefix: Prefix `%path` STRINGorID •

    `%path`  reduce using rule 5 (Prefix)
    `%notation`  reduce using rule 5 (Prefix)
    `%package`  reduce using rule 5 (Prefix)
    `%token`  reduce using rule 5 (Prefix)
    `%left`  reduce using rule 5 (Prefix)
    `%right`  reduce using rule 5 (Prefix)
    `%non`  reduce using rule 5 (Prefix)
    `%rules`  reduce using rule 5 (Prefix)
    `%include`  reduce using rule 5 (Prefix)
    `%prec`  reduce using rule 5 (Prefix)
    `%tables`  reduce using rule 5 (Prefix)
    `%dialect`  reduce using rule 5 (Prefix)
    `%scalalr`  reduce using rule 5 (Prefix)
    `%signature`  reduce using rule 5 (Prefix)


State 21

    3 Prefix: Prefix `%notation` ID •

    `%path`  reduce using rule 3 (Prefix)
    `%notation`  reduce using rule 3 (Prefix)
    `%package`  reduce using rule 3 (Prefix)
    `%token`  reduce using rule 3 (Prefix)
    `%left`  reduce using rule 3 (Prefix)
    `%right`  reduce using rule 3 (Prefix)
    `%non`  reduce using rule 3 (Prefix)
    `%rules`  reduce using rule 3 (Prefix)
    `%include`  reduce using rule 3 (Prefix)
    `%prec`  reduce using rule 3 (Prefix)
    `%tables`  reduce using rule 3 (Prefix)
    `%dialect`  reduce using rule 3 (Prefix)
    `%scalalr`  reduce using rule 3 (Prefix)
    `%signature`  reduce using rule 3 (Prefix)


State 22

    4 Prefix: Prefix `%package` ID •

    `%path`  reduce using rule 4 (Prefix)
    `%notation`  reduce using rule 4 (Prefix)
    `%package`  reduce using rule 4 (Prefix)
    `%token`  reduce using rule 4 (Prefix)
    `%left`  reduce using rule 4 (Prefix)
    `%right`  reduce using rule 4 (Prefix)
    `%non`  reduce using rule 4 (Prefix)
    `%rules`  reduce using rule 4 (Prefix)
    `%include`  reduce using rule 4 (Prefix)
    `%prec`  reduce using rule 4 (Prefix)
    `%tables`  reduce using rule 4 (Prefix)
    `%dialect`  reduce using rule 4 (Prefix)
    `%scalalr`  reduce using rule 4 (Prefix)
    `%signature`  reduce using rule 4 (Prefix)


State 23

   24 TypedTerminal: STRINGorID • `:` Type
   25      | STRINGorID • `(` Type `)`
   26      | STRINGorID •

    `:`  shift, and go to state 37
    `(`  shift, and go to state 38

    ID  reduce using rule 26 (TypedTerminal)
    STRING  reduce using rule 26 (TypedTerminal)
    `%path`  reduce using rule 26 (TypedTerminal)
    `%notation`  reduce using rule 26 (TypedTerminal)
    `%package`  reduce using rule 26 (TypedTerminal)
    `%token`  reduce using rule 26 (TypedTerminal)
    `%left`  reduce using rule 26 (TypedTerminal)
    `%right`  reduce using rule 26 (TypedTerminal)
    `%non`  reduce using rule 26 (TypedTerminal)
    `%rules`  reduce using rule 26 (TypedTerminal)
    `%include`  reduce using rule 26 (TypedTerminal)
    `%prec`  reduce using rule 26 (TypedTerminal)
    `%tables`  reduce using rule 26 (TypedTerminal)
    `%dialect`  reduce using rule 26 (TypedTerminal)
    `%scalalr`  reduce using rule 26 (TypedTerminal)
    `%signature`  reduce using rule 26 (TypedTerminal)


State 24

    8 Prefix: Prefix `%token` TypedTerminals •

    `%path`  reduce using rule 8 (Prefix)
    `%notation`  reduce using rule 8 (Prefix)
    `%package`  reduce using rule 8 (Prefix)
    `%token`  reduce using rule 8 (Prefix)
    `%left`  reduce using rule 8 (Prefix)
    `%right`  reduce using rule 8 (Prefix)
    `%non`  reduce using rule 8 (Prefix)
    `%rules`  reduce using rule 8 (Prefix)
    `%include`  reduce using rule 8 (Prefix)
    `%prec`  reduce using rule 8 (Prefix)
    `%tables`  reduce using rule 8 (Prefix)
    `%dialect`  reduce using rule 8 (Prefix)
    `%scalalr`  reduce using rule 8 (Prefix)
    `%signature`  reduce using rule 8 (Prefix)


State 25

   23 TypedTerminals: TypedTerminal • TypedTerminals

    ID  shift, and go to state 142
    STRING  shift, and go to state 143

    `%path`  reduce using rule 22 (TypedTerminals)
    `%notation`  reduce using rule 22 (TypedTerminals)
    `%package`  reduce using rule 22 (TypedTerminals)
    `%token`  reduce using rule 22 (TypedTerminals)
    `%left`  reduce using rule 22 (TypedTerminals)
    `%right`  reduce using rule 22 (TypedTerminals)
    `%non`  reduce using rule 22 (TypedTerminals)
    `%rules`  reduce using rule 22 (TypedTerminals)
    `%include`  reduce using rule 22 (TypedTerminals)
    `%prec`  reduce using rule 22 (TypedTerminals)
    `%tables`  reduce using rule 22 (TypedTerminals)
    `%dialect`  reduce using rule 22 (TypedTerminals)
    `%scalalr`  reduce using rule 22 (TypedTerminals)
    `%signature`  reduce using rule 22 (TypedTerminals)

    STRINGorID  go to state 23
    TypedTerminals  go to state 39
    TypedTerminal  go to state 25


State 26

    9 Prefix: Prefix `%left` TypedTerminals •

    `%path`  reduce using rule 9 (Prefix)
    `%notation`  reduce using rule 9 (Prefix)
    `%package`  reduce using rule 9 (Prefix)
    `%token`  reduce using rule 9 (Prefix)
    `%left`  reduce using rule 9 (Prefix)
    `%right`  reduce using rule 9 (Prefix)
    `%non`  reduce using rule 9 (Prefix)
    `%rules`  reduce using rule 9 (Prefix)
    `%include`  reduce using rule 9 (Prefix)
    `%prec`  reduce using rule 9 (Prefix)
    `%tables`  reduce using rule 9 (Prefix)
    `%dialect`  reduce using rule 9 (Prefix)
    `%scalalr`  reduce using rule 9 (Prefix)
    `%signature`  reduce using rule 9 (Prefix)


State 27

   10 Prefix: Prefix `%right` TypedTerminals •

    `%path`  reduce using rule 10 (Prefix)
    `%notation`  reduce using rule 10 (Prefix)
    `%package`  reduce using rule 10 (Prefix)
    `%token`  reduce using rule 10 (Prefix)
    `%left`  reduce using rule 10 (Prefix)
    `%right`  reduce using rule 10 (Prefix)
    `%non`  reduce using rule 10 (Prefix)
    `%rules`  reduce using rule 10 (Prefix)
    `%include`  reduce using rule 10 (Prefix)
    `%prec`  reduce using rule 10 (Prefix)
    `%tables`  reduce using rule 10 (Prefix)
    `%dialect`  reduce using rule 10 (Prefix)
    `%scalalr`  reduce using rule 10 (Prefix)
    `%signature`  reduce using rule 10 (Prefix)


State 28

   11 Prefix: Prefix `%non` TypedTerminals •

    `%path`  reduce using rule 11 (Prefix)
    `%notation`  reduce using rule 11 (Prefix)
    `%package`  reduce using rule 11 (Prefix)
    `%token`  reduce using rule 11 (Prefix)
    `%left`  reduce using rule 11 (Prefix)
    `%right`  reduce using rule 11 (Prefix)
    `%non`  reduce using rule 11 (Prefix)
    `%rules`  reduce using rule 11 (Prefix)
    `%include`  reduce using rule 11 (Prefix)
    `%prec`  reduce using rule 11 (Prefix)
    `%tables`  reduce using rule 11 (Prefix)
    `%dialect`  reduce using rule 11 (Prefix)
    `%scalalr`  reduce using rule 11 (Prefix)
    `%signature`  reduce using rule 11 (Prefix)


State 29

   16 INCLUDE: `%include` • CODE SEPARATOR

    CODE  shift, and go to state 40


State 30

    1 Notation: Prefix `%rules` INCLUDE • Rules OPTSEPARATOR

    ID  shift, and go to state 41

    Rules  go to state 42
    Rule  go to state 43
    LHS  go to state 44


State 31

    7 Prefix: Prefix `%include` CODE •

    `%path`  reduce using rule 7 (Prefix)
    `%notation`  reduce using rule 7 (Prefix)
    `%package`  reduce using rule 7 (Prefix)
    `%token`  reduce using rule 7 (Prefix)
    `%left`  reduce using rule 7 (Prefix)
    `%right`  reduce using rule 7 (Prefix)
    `%non`  reduce using rule 7 (Prefix)
    `%rules`  reduce using rule 7 (Prefix)
    `%include`  reduce using rule 7 (Prefix)
    `%prec`  reduce using rule 7 (Prefix)
    `%tables`  reduce using rule 7 (Prefix)
    `%dialect`  reduce using rule 7 (Prefix)
    `%scalalr`  reduce using rule 7 (Prefix)
    `%signature`  reduce using rule 7 (Prefix)


State 32

   12 Prefix: Prefix `%prec` TypedTerminals •

    `%path`  reduce using rule 12 (Prefix)
    `%notation`  reduce using rule 12 (Prefix)
    `%package`  reduce using rule 12 (Prefix)
    `%token`  reduce using rule 12 (Prefix)
    `%left`  reduce using rule 12 (Prefix)
    `%right`  reduce using rule 12 (Prefix)
    `%non`  reduce using rule 12 (Prefix)
    `%rules`  reduce using rule 12 (Prefix)
    `%include`  reduce using rule 12 (Prefix)
    `%prec`  reduce using rule 12 (Prefix)
    `%tables`  reduce using rule 12 (Prefix)
    `%dialect`  reduce using rule 12 (Prefix)
    `%scalalr`  reduce using rule 12 (Prefix)
    `%signature`  reduce using rule 12 (Prefix)


State 33

    6 Prefix: Prefix `%tables` STRINGorID •

    `%path`  reduce using rule 6 (Prefix)
    `%notation`  reduce using rule 6 (Prefix)
    `%package`  reduce using rule 6 (Prefix)
    `%token`  reduce using rule 6 (Prefix)
    `%left`  reduce using rule 6 (Prefix)
    `%right`  reduce using rule 6 (Prefix)
    `%non`  reduce using rule 6 (Prefix)
    `%rules`  reduce using rule 6 (Prefix)
    `%include`  reduce using rule 6 (Prefix)
    `%prec`  reduce using rule 6 (Prefix)
    `%tables`  reduce using rule 6 (Prefix)
    `%dialect`  reduce using rule 6 (Prefix)
    `%scalalr`  reduce using rule 6 (Prefix)
    `%signature`  reduce using rule 6 (Prefix)


State 34

   13 Prefix: Prefix `%dialect` STRINGorID •

    `%path`  reduce using rule 13 (Prefix)
    `%notation`  reduce using rule 13 (Prefix)
    `%package`  reduce using rule 13 (Prefix)
    `%token`  reduce using rule 13 (Prefix)
    `%left`  reduce using rule 13 (Prefix)
    `%right`  reduce using rule 13 (Prefix)
    `%non`  reduce using rule 13 (Prefix)
    `%rules`  reduce using rule 13 (Prefix)
    `%include`  reduce using rule 13 (Prefix)
    `%prec`  reduce using rule 13 (Prefix)
    `%tables`  reduce using rule 13 (Prefix)
    `%dialect`  reduce using rule 13 (Prefix)
    `%scalalr`  reduce using rule 13 (Prefix)
    `%signature`  reduce using rule 13 (Prefix)


State 35

   14 Prefix: Prefix `%scalalr` STRINGorID •

    `%path`  reduce using rule 14 (Prefix)
    `%notation`  reduce using rule 14 (Prefix)
    `%package`  reduce using rule 14 (Prefix)
    `%token`  reduce using rule 14 (Prefix)
    `%left`  reduce using rule 14 (Prefix)
    `%right`  reduce using rule 14 (Prefix)
    `%non`  reduce using rule 14 (Prefix)
    `%rules`  reduce using rule 14 (Prefix)
    `%include`  reduce using rule 14 (Prefix)
    `%prec`  reduce using rule 14 (Prefix)
    `%tables`  reduce using rule 14 (Prefix)
    `%dialect`  reduce using rule 14 (Prefix)
    `%scalalr`  reduce using rule 14 (Prefix)
    `%signature`  reduce using rule 14 (Prefix)


State 36

   15 Prefix: Prefix `%signature` STRINGorID •

    `%path`  reduce using rule 15 (Prefix)
    `%notation`  reduce using rule 15 (Prefix)
    `%package`  reduce using rule 15 (Prefix)
    `%token`  reduce using rule 15 (Prefix)
    `%left`  reduce using rule 15 (Prefix)
    `%right`  reduce using rule 15 (Prefix)
    `%non`  reduce using rule 15 (Prefix)
    `%rules`  reduce using rule 15 (Prefix)
    `%include`  reduce using rule 15 (Prefix)
    `%prec`  reduce using rule 15 (Prefix)
    `%tables`  reduce using rule 15 (Prefix)
    `%dialect`  reduce using rule 15 (Prefix)
    `%scalalr`  reduce using rule 15 (Prefix)
    `%signature`  reduce using rule 15 (Prefix)


State 37

   24 TypedTerminal: STRINGorID `:` • Type

    ID  shift, and go to state 45
    `(`  shift, and go to state 46

    Type  go to state 47


State 38

   25 TypedTerminal: STRINGorID `(` • Type `)`

    ID  shift, and go to state 144
    `(`  shift, and go to state 145

    Type  go to state 48


State 39

   23 TypedTerminals: TypedTerminal TypedTerminals •

    `%path`  reduce using rule 23 (TypedTerminals)
    `%notation`  reduce using rule 23 (TypedTerminals)
    `%package`  reduce using rule 23 (TypedTerminals)
    `%token`  reduce using rule 23 (TypedTerminals)
    `%left`  reduce using rule 23 (TypedTerminals)
    `%right`  reduce using rule 23 (TypedTerminals)
    `%non`  reduce using rule 23 (TypedTerminals)
    `%rules`  reduce using rule 23 (TypedTerminals)
    `%include`  reduce using rule 23 (TypedTerminals)
    `%prec`  reduce using rule 23 (TypedTerminals)
    `%tables`  reduce using rule 23 (TypedTerminals)
    `%dialect`  reduce using rule 23 (TypedTerminals)
    `%scalalr`  reduce using rule 23 (TypedTerminals)
    `%signature`  reduce using rule 23 (TypedTerminals)


State 40

   16 INCLUDE: `%include` CODE • SEPARATOR

    SEPARATOR  shift, and go to state 49


State 41

   30 LHS: ID • `:` Type `=`
   31      | ID • `=`

    `=`  shift, and go to state 50
    `:`  shift, and go to state 51


State 42

    1 Notation: Prefix `%rules` INCLUDE Rules • OPTSEPARATOR
   28 Rules: Rules • SEPARATOR Rule

    SEPARATOR  shift, and go to state 52

    $end  reduce using rule 18 (OPTSEPARATOR)

    OPTSEPARATOR  go to state 53


State 43

   27 Rules: Rule •

    $end   reduce using rule 27 (Rules)
    SEPARATOR  reduce using rule 27 (Rules)


State 44

   29 Rule: LHS • S_1 RHS

    `|`  shift, and go to state 54

    ID  reduce using rule 73 (S_1)
    STRING  reduce using rule 73 (S_1)
    `(`  reduce using rule 73 (S_1)
    `%empty`  reduce using rule 73 (S_1)

    S_1  go to state 55


State 45

   49 Type: ID •
   50      | ID • `[` Types `]`

    `[`  shift, and go to state 56

    ID  reduce using rule 49 (Type)
    STRING  reduce using rule 49 (Type)
    `%path`  reduce using rule 49 (Type)
    `%notation`  reduce using rule 49 (Type)
    `%package`  reduce using rule 49 (Type)
    `%token`  reduce using rule 49 (Type)
    `%left`  reduce using rule 49 (Type)
    `%right`  reduce using rule 49 (Type)
    `%non`  reduce using rule 49 (Type)
    `%rules`  reduce using rule 49 (Type)
    `%include`  reduce using rule 49 (Type)
    `%prec`  reduce using rule 49 (Type)
    `%tables`  reduce using rule 49 (Type)
    `%dialect`  reduce using rule 49 (Type)
    `%scalalr`  reduce using rule 49 (Type)
    `%signature`  reduce using rule 49 (Type)


State 46

   51 Type: `(` • Types `)`
   52      | `(` • `)`

    ID  shift, and go to state 146
    `(`  shift, and go to state 147
    `)`  shift, and go to state 57

    Type  go to state 58
    Types  go to state 59
    S_4_L  go to state 60
    S_4  go to state 61


State 47

   24 TypedTerminal: STRINGorID `:` Type •
